
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {float* mins; float* maxs; int sh; int sw; float actualSampleSize; } ;
typedef TYPE_1__ rawLightmap_t ;


 int CLUSTER_UNMAPPED ;
 float DotProduct (float*,float*) ;
 int I_FloatTime () ;
 int MAX_STITCH_CANDIDATES ;
 int MAX_STITCH_LUXELS ;
 int* SUPER_CLUSTER (int,int) ;
 float* SUPER_LUXEL (int ,int,int) ;
 float* SUPER_NORMAL (int,int) ;
 float* SUPER_ORIGIN (int,int) ;
 int SYS_VRB ;
 int Sys_FPrintf (int ,char*,int) ;
 int Sys_Printf (char*,...) ;
 int VectorAdd (float*,float*,float*) ;
 int VectorClear (float*) ;
 int VectorScale (float*,float,float*) ;
 int abs (int) ;
 float fabs (float) ;
 int numRawLightmaps ;
 TYPE_1__* rawLightmaps ;

void StitchSurfaceLightmaps( void ){
 int i, j, x, y, x2, y2, *cluster, *cluster2,
  numStitched, numCandidates, numLuxels, f, fOld, start;
 rawLightmap_t *lm, *a, *b, *c[ MAX_STITCH_CANDIDATES ];
 float *luxel, *luxel2, *origin, *origin2, *normal, *normal2,
      sampleSize, average[ 3 ], totalColor, ootc, *luxels[ MAX_STITCH_LUXELS ];



 return;


 Sys_Printf( "--- StitchSurfaceLightmaps ---\n" );


 fOld = -1;
 start = I_FloatTime();


 numStitched = 0;
 for ( i = 0; i < numRawLightmaps; i++ )
 {

  f = 10 * i / numRawLightmaps;
  if ( f != fOld ) {
   fOld = f;
   Sys_Printf( "%i...", f );
  }


  a = &rawLightmaps[ i ];


  numCandidates = 0;
  for ( j = i + 1; j < numRawLightmaps && numCandidates < MAX_STITCH_CANDIDATES; j++ )
  {

   b = &rawLightmaps[ j ];


   if ( a->mins[ 0 ] > b->maxs[ 0 ] || a->maxs[ 0 ] < b->mins[ 0 ] ||
     a->mins[ 1 ] > b->maxs[ 1 ] || a->maxs[ 1 ] < b->mins[ 1 ] ||
     a->mins[ 2 ] > b->maxs[ 2 ] || a->maxs[ 2 ] < b->mins[ 2 ] ) {
    continue;
   }


   c[ numCandidates++ ] = b;
  }


  for ( y = 0; y < a->sh; y++ )
  {
   for ( x = 0; x < a->sw; x++ )
   {

    lm = a;
    cluster = SUPER_CLUSTER( x, y );
    if ( *cluster == CLUSTER_UNMAPPED ) {
     continue;
    }
    luxel = SUPER_LUXEL( 0, x, y );
    if ( luxel[ 3 ] <= 0.0f ) {
     continue;
    }


    origin = SUPER_ORIGIN( x, y );
    normal = SUPER_NORMAL( x, y );


    for ( j = 0; j < numCandidates; j++ )
    {

     b = c[ j ];
     lm = b;


     sampleSize = 0.5f * ( a->actualSampleSize < b->actualSampleSize ? a->actualSampleSize : b->actualSampleSize );


     if ( origin[ 0 ] < ( b->mins[ 0 ] - sampleSize ) || ( origin[ 0 ] > b->maxs[ 0 ] + sampleSize ) ||
       origin[ 1 ] < ( b->mins[ 1 ] - sampleSize ) || ( origin[ 1 ] > b->maxs[ 1 ] + sampleSize ) ||
       origin[ 2 ] < ( b->mins[ 2 ] - sampleSize ) || ( origin[ 2 ] > b->maxs[ 2 ] + sampleSize ) ) {
      continue;
     }


     VectorClear( average );
     numLuxels = 0;
     totalColor = 0.0f;
     for ( y2 = 0; y2 < b->sh && numLuxels < MAX_STITCH_LUXELS; y2++ )
     {
      for ( x2 = 0; x2 < b->sw && numLuxels < MAX_STITCH_LUXELS; x2++ )
      {

       if ( a == b && abs( x - x2 ) <= 1 && abs( y - y2 ) <= 1 ) {
        continue;
       }


       cluster2 = SUPER_CLUSTER( x2, y2 );
       if ( *cluster2 == CLUSTER_UNMAPPED ) {
        continue;
       }
       luxel2 = SUPER_LUXEL( 0, x2, y2 );
       if ( luxel2[ 3 ] <= 0.0f ) {
        continue;
       }


       origin2 = SUPER_ORIGIN( x2, y2 );
       normal2 = SUPER_NORMAL( x2, y2 );


       if ( DotProduct( normal, normal2 ) < 0.5f ) {
        continue;
       }


       if ( fabs( origin[ 0 ] - origin2[ 0 ] ) > sampleSize ||
         fabs( origin[ 1 ] - origin2[ 1 ] ) > sampleSize ||
         fabs( origin[ 2 ] - origin2[ 2 ] ) > sampleSize ) {
        continue;
       }



       luxels[ numLuxels++ ] = luxel2;
       VectorAdd( average, luxel2, average );
       totalColor += luxel2[ 3 ];
      }
     }


     if ( numLuxels == 0 ) {
      continue;
     }


     ootc = 1.0f / totalColor;
     VectorScale( average, ootc, luxel );
     luxel[ 3 ] = 1.0f;
     numStitched++;
    }
   }
  }
 }


 Sys_Printf( " (%i)\n", (int) ( I_FloatTime() - start ) );
 Sys_FPrintf( SYS_VRB, "%9d luxels stitched\n", numStitched );
}
